# genai-notebooks

./: .gitignore  Agent Bricks Monitoring.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt
.cursor/: mcp.json
ai_functions/: ai_query Prompt Patterns.ipynb  les_mis_data_prep.ipynb  les_miserables_aiquery.ipynb  les_miserables_ray.ipynb  les_miserables_spark.ipynb  ray_external_model_les_mis.ipynb
cost_management/: throughput_estimation.ipynb
custom_models/: Gemma3.ipynb  Qwen Example.ipynb  tinyllama_transformers.ipynb
document_intelligence/: ai_query.dbquery.ipynb  claim_doc_ai_parse.ipynb  claim_doc_profile.ipynb  claim_doc_ray_claude.ipynb  claude_ai_query.ipynb  claude_structured.ipynb  docling_on_databricks.ipynb  docling_parser.py  few_shot_multimodal_classification.ipynb  form_parsing_combined_pipeline.ipynb  layoutlmv3.py  layoutparser.py  pdf_parsing.ipynb  preprocess.py  yolo.py
dspy/: mlflowmodel.py
external_models/: azure_search_responses_agent.ipynb  openai_oss_thinking.ipynb  pyfunc_azure_chat_retriever.py  pyfunc_azure_completion_retriever.py
fastapi/: test_app.ipynb  test_llm_client.ipynb
langgraph/: langgraph_basics.ipynb  reasoning.ipynb  structured_outputs.ipynb
mcp/: deck_code.ipynb
mlflow/: README.md  arxiv_agent.py  arxiv_eval_walkthrough.ipynb  arxiv_tools.py  eval_questions.py  mlflow_api.ipynb  rest_api_walkthrough.ipynb
multimodal/: ai_query.dbquery.ipynb  claude_ai_query.ipynb  claude_structured.ipynb  few_shot_multimodal_classification.ipynb  pdf_parsing.ipynb
resources/: document_intelligence_job.yml  mlflow_job.yml  pii_profiling_job.yml  vs_bench_job.yml  vs_filter_test_job.yml
vector_search/: 1a_self_managed_filter_test.py  1b_managed_embedding_filter_test.py  2a_setup_data.py  2b_setup_vs.py  2c_setup_pg.py  2d_benchmark.py  3a_vector_search_load_test.ipynb  3b_spark_vector.ipynb  3c_aiohttp_inference_job.py  3d_lookback_job.py  config.py
vllm/: pii_detection_profiling.ipynb
